--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -752,3 +752,17 @@ Teleport back to the cave to the Material Plane
         - then immediately betray the lord and mistress, killing them
         - teleports bookshelf from [House Stayanoga] and the party back to the ship at the inner dock
         
+++++Session 46
+    "King" [Grogar] forges a document claiming that Lord Stayanoga has transfered ownership of his estate to King Grogar (Rolls a result 18)
+     - uses a short rest
+     
+    the group passed by the north/eastern flank of the city that was being attacked by [Koloss] and sley many on both sides
+    
+    Going to [House Salazar]
+     - House Salazar Assassins for EVIL GROUP
+     - Grogar kills Lord Salazar
+     
+    
+    
+    
+           
