--- a/data/Hadar.wiki
+++ b/data/Hadar.wiki
@@ -2,7 +2,7 @@
 
 Hadar manifests by being summoned into other realms by warlocks.
 
-Hadar appears as a mass of black tenticles.
+Hadar appears as a mass of black tenticles that reach out from a central hovering point in the air.
 
 [Hadar] is forever trapped in the [Demonweb], always searching for an exit, a way to leave, and takes advantage of every portal presented to him by his followers.
 
@@ -10,11 +10,21 @@ Hadar is born of darkness, so after every time he is killed in the [Demonweb] he
 
 Hadar survives by consuming the mist of [Lolth]'s followers.
 
+followers: [Matkina] [Tessa]
 
 HP 275 AC 12
 
-
-
-
-
-You open a gateway to the dark between the stars, a region infested with unknown horrors. A 20-foot-radius sphere of blackness and bitter cold appears, centered on a point within range and lasting for the duration. This void is filled with a cacophony of soft whispers and slurping noises that can be heard up to 30 feet away. No light, magical or otherwise, can illuminate the area, and creatures fully within the area are blinded. The void creates a warp in the fabric of space, and the area is difficult terrain. Any creature that starts its turn in the area takes 2d6 cold damage. Any creature that ends its turn in the area must succeed on a Dexterity saving throw or take 2d6 acid damage as milky, otherworldly tentacles rub against it.
+Arms of Hadar:
+    -10ft range of self
+    -7d6 damage
+    -STR save throw of DC 23
+        -fail: full damage and can't take reactions until Hadar's next turn
+        -success: half damage
+        
+Darkness:
+    - range 100ft, radius 50ft        
+    
+Hunger of Hadar:
+    - (line of "sight" range), 30ft radius
+    - 4d6 cold for starting turn here    
+    - 4d6 acid for ending turn here unless they pass a DC 17 DEX save
