adding group three notes

--- a/data/Dun Morhen.wiki
+++ b/data/Dun Morhen.wiki
@@ -27,8 +27,7 @@ Wildlife includes (monster book):
     Dire Wolves (pg 321)
     Bulette (pg 34)
     Wyvern (pg 303)
-    
-Area of Interest
+    area of Interest
     [Wyverns Lair]
     
     
