--- a/data/House Stayanoga.wiki
+++ b/data/House Stayanoga.wiki
@@ -26,14 +26,9 @@ Desires to leave [Luthadel] with his wife [Korinn] who is strictly held captive 
         
         
 ++++Study Books:
-    - The Holy City of Luthadel
-            -founded by ancient Iksar who once ruled the entire continent of [Kunark]
-            -the tribes were united thousands of years ago by [Venril Sathir]
-            -[Kalas] used to be the ancient iksar capital, but has since been abandoned
-    - The Great Age of Peace
-            covers the efforts of ancient iksar lead by [Venril Sathir] that lead to the everlasting peace
-            -the subjugation of the inferior races
-            -the extermination of those who refused to acknowledge the iksar
-                -stubborn dwarves of [Kaladim]
-                -prideful high elves of [Felwithe]
-            
+    [Holy Tome of the Order of Steel]
+    [The Holy City of Luthadel]
+    [The Great Age of Peace] 
+    [Kalas the City of Mist]
+ 
+                  
