fixing small stuff

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -632,9 +632,9 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     
     the group travels back to the boat (being tailed by [Varneth] who watches them closely
     -found the darkwater pond with rocks/oozes
-    -[Tessa] throws a piece of gold in and makes a with to understand the [Stone of Kord]
+    -[Tessa] throws a piece of gold in and makes a wish to understand the [Stone of Kord]
     -[Tessa] + [Kyra] teleport back
-    -[Plosive} + [Quinn] swim  
+    -[Plosive] + [Quinn] swim  
       
     the group travels back to the land of [Dun Morhen]  
     -head back to the ruin but find a new dirt mound from a Bulette and follow it to the scene where they earlier slew 5 bears
