adding evil group notes

--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -771,6 +771,19 @@ Teleport back to the cave to the Material Plane
     -5 remaining retreat inside  
     -battle ended inside the house, (see photo)  
     
+++++Session 48
+    the group slays and loots [House Zashier]
+    -slaying the lord Zashier
+    -loot the etherium ingot chest
     
+    6 refugee skaa are being sent to the ship, sending stone message from [Croaker] informs [Cael]    
     
-           
+    the group attempts to interact with [Gruumsh] as he makes his way to [Acheron]
+      -gruumsh travels to Archeron
+    
+    "solar flare" striking 12 of the [Koloss]
+    43 dmg
+    -9 killed, 3 saved, taking 21 dmg
+    
+    the group is traveling to north east [Order of Steel] temple in [Luthadel]
+      -the group sees a scene where some iksar guards and brothers are fending off some of the [Koloss]
