--- a/data/House Zolis.wiki
+++ b/data/House Zolis.wiki
@@ -9,3 +9,17 @@ Lead by Lord Zolis, a perverted and hideous person
   -slave auction house
   -black market
     -slave brothels
+    
+
+Study
+    Skaa inventory/transaction documents, several female sounding names are circled, many others are crossed out.
+      -transactions with Zashier(tough miners) and Salazar(attractive)
+      -transactions with ones selected to be dumped at [Neriak]
+      
+Kitchen
+    Twice the size of most other kitchens in [Luthadel]
+        -staff of 10 Skaa
+        -Luxurious food is crafted here
+        -Platinum cooking utensils
+        -Scraps are fed to the Giant Hyenas, the scraps of the Hyena scraps are fed to the Skaa chefs
+              
