--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -18,7 +18,8 @@ XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 
 XXXXXXX
-XXX
+XXXXX(August 7th)XX
+
 
 [Kyra] orders a bronze barding for her wolf Vin from Erky at [Ak'anon]
   -7 days to make -DONE
@@ -654,4 +655,14 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       - [Tessa] learns to read the [Foresake the Gods]
       WEENIE FOR NEXT SESSION- a surviving refugee believes the group was actually sent there to save them.
       
-        
+++++Session 26
+    Docking at the refugee camp at [Odus]
+      -4 rag wearing commoners, Kelsier and the Golden Hand Mercenary are told to get on the ship
+      -the group finds the girl child in the woods that had killed her brother
+      -buries the dead brother of the girl at the camp
+      -[Tessa] burns two bodies found in a tent
+    
+    3 days to [Fiore] XXX
+      -docks at the east dock
+      -500 adventuring experience given 
+    
