adding evil group related content

--- a/data/AkumaFruits.wiki
+++ b/data/AkumaFruits.wiki
@@ -26,6 +26,7 @@ LOGIA
 13. Shadow element 
 14. Etherium element [Venril Sathir]
 15. Ethereal (exists in material and Ethereal plane simultaneously)
+16. Alternate Reality Attunement [Callistege] 
 
 ZOAN
 1. Bear - Triggered by anger - (consumed by [Croaker]) (use pg 208 in monster book)
