--- a/data/Callistege.wiki
+++ b/data/Callistege.wiki
@@ -2,6 +2,11 @@
 
 Human jewler who works with Mithril and Etherium in [Luthadel], sells to the [Iksar] nobility.
 
+Ate the Alternate Reality Attunement [AkumaFruits]
+    -many transparent images of herself radiate from her solid self, each from an alternate reality where she also consumed the Alternate Reality Attunement fruit. A wide array of actions,emotions, and reactions to things unseen are expressed by these images.
+    
+    use Enchanter (from Volos)
+
 can make: 
     -Reinenforced-Etherium Dimentional Shackles (pg 165)
         -400g, 10 days to make, requires 1 lb of Steel/Iron and 1 lb of Etherium
