--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -1,9 +1,12 @@
 ﻿++ Leeran
 
 Leeran, who only ever appears at the shops in [Gorda] and [Luthadel] as an illusionary projection.
-    his real body is buried 10ft under the floor of the shop in [Luthadel]
-     
+    His real body is buried 10ft under the floor of the shop in [Luthadel]
+    Consumed the Projection [AkumaFruits] 
 
+Illusionist (from volos)
+
+Items for Sale:
         -god fruit - 6000g each (2 in stock in respective sized decorative metal boxes)
         -potions - weak 20g each 2d4+2
             -normal 40g each 4d4+4
