--- a/data/Evil Group Crew.wiki
+++ b/data/Evil Group Crew.wiki
@@ -18,8 +18,9 @@ total food 14
 [Thia] - Wood Elf from [Fiore] - Fisher - DEAD died at [Dun Morhen]
 [Krusk] - Half orc farmer
 
+6 skaa from [House Zasheir]
 
-Kael
+Cael
 Vulcan
 Croaker
 -Jor Doken Flame Skull (pg 134)
