--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -797,4 +797,19 @@ Teleport back to the cave to the Material Plane
           [Leeran] the merchant (Illusionist)
           [Iggy] the strong (Champion)
           
-          
+    the group goes into the north [Order of Steel] temple and awaken [Velsharoon] by croaker getting too close with the stone etherium inlayed stone rings of spell storing, sucking out the remaining energies of [Venril Sathir]      
+        -[Edan] charmed to dig up the remains of [Velsharoon]
+        -[Grogar] carves [Tharizdun]'s symbol into a bone of [Velsharoon]  
+        -after being unable to get all of his remains dug up by the group, he flys out to gather those who will, by force
+        
+    "[Thia]" the chain devil is summoned by [Croaker]
+        -[Grogar] offers sharkbite and eye taker
+        
+    [Croaker] tells [Cael] to put the back of [Velsharoon] bones into a safe/secure place.
+        -the group earthquakes the North temple of the [Order of Steel]    
+        
+    The group has traveled to the South temple of the [Order of Steel]
+        -discover the dimeritium encased body of [Vaprak]     
+        
+    the group then flys back to the ship      
+        -the 6 skaa from [House Zasheir] made it to the ship
