--- a/data/Thia.wiki
+++ b/data/Thia.wiki
@@ -1,3 +1,13 @@
 ﻿++ Thia
 
 Wood Elf Female charismatic for 40g - Fiore - Fisher
+
+
+
+EVIL GROUP
+Use Chain Devil
+
+Shark Bite - 1d6/1d8 versatile staff, slashing/bludgeoning, etherium inlay
+ +1 DMG, +1 TH
+
+Eye Taker  2d4 Slashing
