--- a/data/Acheron.wiki
+++ b/data/Acheron.wiki
@@ -5,3 +5,11 @@ Acheron is an eternal battlefield of endless conflict. It is a plane of law wher
 Every cube face is habitable, with gravity always being directed towards the cube's center; furthermore, the cubes are filled with caverns and tunnels.
 
 The light on Acheron varies between that similar to bright moonlight to that of a dark and cloudy day. The sound of battle resonates around the plane and can always be heard in the distance.
+
+Factions that are constantly at war:
+  -Followers of [Kadi]
+  -The Spawn of [Gruumsh]
+  -The Ogre tribes of [Vaprak]
+  
+Archeron is a big cash cow for people of the adjacent realm of [Shadowfell]  
+  -food/weapons/armour
