--- a/data/Velsharoon.wiki
+++ b/data/Velsharoon.wiki
@@ -5,3 +5,10 @@ An ancient human who ascended to godhood through master of necromancy, becoming 
 Deemed to be a threat, [Venril Sathir] turned him instead into a powerful asset
 
 Velsharoon passively emminates a mass suggestion effect to all around him, who passively take necrotic damage.
+
+
+Crypts:
+  -Northern [Order of Steel] temple in [Luthadel]
+  -Under the palace in [Nicosia]
+  -The catacombs in the peak to the north of [Nicosia]
+  
