--- a/data/Nicosia.wiki
+++ b/data/Nicosia.wiki
@@ -4,3 +4,4 @@ the [Shadowfell] reflection of [Mayara] in [Fiore]
 
 formerly ruled by the lich [Velsharoon], this city has become a undead slum
 
+currently ruled by [Lorian], a beefy dark knight, and [Lothric], an emaciated necromancer 
